--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ DOCTYPE html>
   </ul>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="../slideshow/img/p1.jpg" alt="Los Angeles" width="1100" height="500">
+      <img src="../img/p1.jpg" alt="Los Angeles" width="1100" height="500">
       <div class="carousel-caption">
         <h3>Bella</h3>
         <p>If you want a friend, buy a dog.</p>
@@ -83,14 +83,14 @@ DOCTYPE html>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="../slideshow/img/p2.jpg" alt="Chicago" width="1100" height="500">
+      <img src="../img/p2.jpg" alt="Chicago" width="1100" height="500">
       <div class="carousel-caption">
         <h3>Max</h3>
         <p>The more people I meet the more I like my dog</p>
       </div>  
     </div>
     <div class="carousel-item">
-      <img src="../slideshow/img/p3.jpg" alt="New York" width="1100" height="500">
+      <img src="../img/p3.jpg" alt="New York" width="1100" height="500">
       <div class="carousel-caption">
         <h3>Coco</h3>
         <p>The dog lives for the day, the hour, even the moment.</p>
